--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,15 +28,33 @@
     &::after {
       content: '';
       position: absolute;
-      top: 70%;
+      top: 50%;
       left: 10%;
-      width: 50%;
-      height: 50%;
+      width: 40%;
+      height: 40%;
       z-index: 0;
-      background: radial-gradient(circle, rgb(129, 23, 190) 0%, rgba(0, 0, 0, 0) 150%);
+      background: radial-gradient(circle, #8117be 0%, rgba(0, 0, 0, 0) 150%);
       filter: blur(100px);
       @media (min-width: 768px) {
-        filter: blur(500px);
+        filter: blur(250px);
+      }
+    }
+  }
+  .glow-effect-white {
+    position: relative;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      right: -20%;
+      width: 40%;
+      height: 40%;
+      z-index: -1;
+      opacity: 0.5;
+      background: radial-gradient(circle, #ffffff 0%, rgba(0, 0, 0, 0) 150%);
+      filter: blur(100px);
+      @media (min-width: 768px) {
+        filter: blur(400px);
       }
     }
   }
