--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+* {
+  scroll-behavior: smooth;
+}
 
 @layer utilities {
   .glow-effect-right {
