--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 }
 
 @layer utilities {
-  .glow-effect-right {
+  .glow-effect-right-cyan {
     background: black;
     &::before {
       content: '';
@@ -23,7 +23,7 @@
       }
     }
   }
-  .glow-effect-middle {
+  .glow-effect-middle-purple {
     background: black;
     &::after {
       content: '';
@@ -40,18 +40,18 @@
       }
     }
   }
-  .glow-effect-white {
+  .glow-effect-cyan-left {
     position: relative;
     &::after {
       content: '';
       position: absolute;
-      top: 50%;
-      right: -20%;
-      width: 40%;
-      height: 40%;
+      top: 0%;
+      left: -10%;
+      width: 60%;
+      height: 60%;
       z-index: -1;
       opacity: 0.5;
-      background: radial-gradient(circle, #ffffff 0%, rgba(0, 0, 0, 0) 150%);
+      background: radial-gradient(circle, #00c8ec 0%, rgba(0, 0, 0, 0) 150%);
       filter: blur(100px);
       @media (min-width: 768px) {
         filter: blur(400px);
